package ph.dlsu.cpei.project;

public abstract class Category {


    public abstract void addHigh(int filenum, String name, String date, String time);
    public abstract void addMed(int filenum, String name, String date, String time);
    public abstract void addLow(int filenum, String name, String date, String time);


}
