@startuml

title __PORCINCULA-DUMANDAN CPEI PROJECT's Class Diagram__\n

  namespace ph.dlsu.cpei.project {
    abstract class ph.dlsu.cpei.project.Category {
    }
  }
  

  namespace ph.dlsu.cpei.project {
    class ph.dlsu.cpei.project.Education {
    }
  }
  

  namespace ph.dlsu.cpei.project {
    class ph.dlsu.cpei.project.Games {
    }
  }
  

  namespace ph.dlsu.cpei.project {
    class ph.dlsu.cpei.project.Home {
    }
  }
  

  namespace ph.dlsu.cpei.project {
    class ph.dlsu.cpei.project.Meeting {
    }
  }
  

  namespace ph.dlsu.cpei.project {
    class ph.dlsu.cpei.project.TaskApp {
    }
  }
  

  namespace ph.dlsu.cpei.project {
    class ph.dlsu.cpei.project.Update {
    }
  }
  

  namespace ph.dlsu.cpei.project {
    class ph.dlsu.cpei.project.UserDatabase {
    }
  }
  

  ph.dlsu.cpei.project.Education -up-|> ph.dlsu.cpei.project.Category
  ph.dlsu.cpei.project.Games -up-|> ph.dlsu.cpei.project.Category
  ph.dlsu.cpei.project.Home -up-|> ph.dlsu.cpei.project.Category
  ph.dlsu.cpei.project.Meeting -up-|> ph.dlsu.cpei.project.Category
  ph.dlsu.cpei.project.TaskApp -up-|> acm.program.ConsoleProgram
  ph.dlsu.cpei.project.TaskApp o-- ph.dlsu.cpei.project.Update : sort


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
